force-app/main/default/objects/Clarity_Form_Assignment__c/Clarity_Form_Assignment__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Assignment</label>
    <nameField>
        <label>Clarity Form Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>