force-app/main/default/objects/Clarity_Form_Assignment__c/fields/Assign__c.field-meta.xml
<CustomField>
    <fullName>Assign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign</label>
    <referenceTo>User</referenceTo>
    <relationshipName>forms__Form_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>