force-app/main/default/objects/Clarity_Form_Assignment__c/fields/Default_Assign__c.field-meta.xml
<CustomField>
    <fullName>Default_Assign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Assign</label>
    <referenceTo>User</referenceTo>
    <relationshipName>forms__Form_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>