force-app/main/default/objects/Clarity_Form_Assignment__c/fields/Logic__c.field-meta.xml
<CustomField>
    <fullName>Logic__c</fullName>
    <defaultValue>&quot;AND&quot;</defaultValue>
    <label>Logic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>